tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/instanceip/wildcard_IP_with_empty_sidecar/_test_context/Sidecar.3360619884.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-98059
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: :18080
    port:
      number: 18080
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
